fixed gap between tab switchiing

--- a/src/scss/blocks/_media-tabs.scss
+++ b/src/scss/blocks/_media-tabs.scss
@@ -68,6 +68,7 @@
     .grid {
       width: calc(100% + 2 * var(--space-xs));
       margin-left: calc(var(--space-xs) * -1);
+      margin-top: calc(var(--space-xs) * -1);
     }
 
     .grid-sizer,
@@ -84,15 +85,15 @@
         width: calc(100% + 2 * var(--space-s));
         margin-left: calc(var(--space-s) * -1);
       }
-  
+
       .grid-sizer,
       .grid-item {
         width: 33.333%;
       }
-  
+
       .grid-item {
         padding: var(--space-s);
-  
+
         img {
           width: 100%;
           height: auto;
